# proxy-manager-vibes

./: .gitignore  .rs  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  TASK.md  VALIDATION_CHECKLIST.md  proxy-manager.py
.ralph/: ralph-history.json  ralph-loop.state.json
src/: app.rs  cli.rs  commands.rs  config.rs  containers.rs  docker.rs  install.rs  lib.rs  main.rs  manager.rs  nginx.rs  ops.rs  paths.rs  proxy.rs  routes.rs  storage.rs  store.rs  tui.rs
src/cli/: handler.rs  mod.rs
src/config/: mod.rs
src/docker/: mod.rs
src/nginx/: mod.rs
src/proxy/: mod.rs
src/tui/: mod.rs
src/utils/: mod.rs
