[package]
name = "proxy-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.17"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
ratatui = "0.28"
crossterm = "0.28"
directories = "5.0"
tar = "0.4"
futures-util = "0.3"

[[bin]]
name = "proxy-manager"
path = "src/main.rs"
