[package]
name = "proxy-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
bollard = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.25", optional = true }
futures = "0.3"
bytes = "1.0"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "proxy-manager"
path = "src/main.rs"
